added my name and designation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Git learning</title>
 </head>
 <body>
-    
+    <h1>Nihal Avulan</h1>
+    <p>I am a software developer</p>
 </body>
 </html>
