--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Nihal Avulan</h1>
     <p>I am a software developer</p>
+
+
+    
+    <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit esse iusto maiores dicta totam quisquam alias ex molestias at quae exercitationem aliquam, sunt rem ipsum ullam. Nobis optio iure ratione.</h6>
+
 </body>
 </html>
